Return the portfolio after a buy/sell
